--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
         }
 
         .card {
-            width: 500px;
+            width: 100%;
+            max-width: 500px;
             height: 200px;
             background-image: linear-gradient(163deg, #FFD700 0%, #FFD700 100%);
             border-radius: 20px;
@@ -164,7 +165,8 @@
         }
 
         .card2 {
-            width: 500px;
+            width: 100%;
+            max-width: 500px;
             height: 200px;
             background-color: rgba(0, 0, 0, 1.0);
             /* Transparent dark background */
@@ -210,7 +212,7 @@
 
         .imagecard img {
             width: 100%;
-            height: 100%;
+            height: auto;
             object-fit: cover;
             display: block;
         }
